fixed navbar collapse

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,7 +27,7 @@ body {
 nav {
     background-color: #3c3c3c;
     color: #e1ddde;
-    padding: 0.5% 2%;
+    padding: 0 2%;
 }
 
 footer {
@@ -51,7 +51,14 @@ footer {
 /*NAVBAR*/
 /*-----*/
 
+.navbar {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+
 /*LOGO*/
+
 .logo {
     height: 100px;
     width: auto;
@@ -67,7 +74,7 @@ footer {
 }
 
 button {
-    color: #3c3c3c;
+    color: transparent;
 }
 
 .nav-item {
@@ -77,7 +84,11 @@ button {
 /*MAIN NAV*/
 .main-nav {
     list-style: none;
-    margin-top: 50px;
+    align-items: center;
+}
+
+.navbar-brand {
+    padding: 0;
 }
 
 .main-nav li {
@@ -108,6 +119,7 @@ button {
 .footer-text {
     float: left;
     list-style: none;
+    padding: 5px 0;
 }
 
 footer ul {
@@ -116,7 +128,7 @@ footer ul {
 
 .footer-text li {
     display: inline-block;
-    margin: 15px 10px 0px 20px;
+    margin-left: 10px;
 }
 
 footer li a:link,
@@ -141,7 +153,8 @@ footer li a:active{
 
 .social-links li {
     display: inline-block;
-    margin: 15px 10px 0px 20px;
+    margin-lef: 10px;
+    align-items: center;
 }
 
 .social-links li a:link,
@@ -248,11 +261,13 @@ h1 {
 /*RESPONSIVE ITEMS*/
 /*----------------*/
 
-/*------------------------------------------------*/
-/*Big tablets to 1200px(width smaller then 1140px row*/
-/*------------------------------------------------*/
-
-@media only screen and (max-width: 1200px) {
+/*----------------------*/
+/*Big tablets to 1400px*/
+/*---------------------*/
+@media only screen and (max-width: 1400px) {
+    .logo {
+        height: 75px;
+    }
     .HomeText {
         width: 100%;
         padding: 0 2%;
@@ -267,7 +282,6 @@ h1 {
     }
     .footer-text li {
         display: inline-block;
-        margin: 15px 10px 0px 0px;
     }
 }
 
